# AudioDevice

./: .gitignore  .gitmodules  NOTICE  README.md
audio_engine/: Cargo.toml  build.rs
audio_engine/crates/portaudio-sys2/: Cargo.toml  build.rs
audio_engine/crates/portaudio-sys2/src/: lib.rs  portaudio.rs
audio_engine/src/: main.rs  main_legacy.rs  rpc.rs
audio_engine/src/audio/: convert.rs  mod.rs  ring.rs
audio_engine/src/backends/: cpal_backend.rs  mod.rs  pa_backend.rs
audio_engine/src/engine/: metrics.rs  mod.rs  routes.rs  session.rs  state.rs
audio_engine/src/tasks/: capture.rs  mod.rs  player.rs  recorder.rs
audiodevice_py/: build_wheel.py  pyproject.toml
audiodevice_py/audiodevice/: __init__.py  alignment_processing.py  api.py  build_engine.ps1  client.py  default.py  engine.py
audiodevice_py/examples/: BUG20260319 there is a delay when processes starts streaming operations #48.py  BUG20260319 thread start streaming audio playback is incomplete.py  BUG20260320 there is a delay when a thread initializes a device #49.py  demo_alignment.py  demo_delay.py  demo_init.py  demo_input_overflow.py  demo_output_overflow.py  demo_play.py  demo_play_diff_processes.py  demo_play_two_processes.py  demo_playrec.py  demo_query_devices.py  demo_rec.py  demo_rec_diff_processes.py  demo_rec_diff_threaded.py  demo_rec_long.py  demo_rec_long_forever.py  demo_rec_monitor.py  demo_rec_two_processes.py  demo_rec_two_threaded.py  demo_stream_and_rec_diff_dev_threaded.py  demo_stream_delay.py  demo_stream_input.py  demo_stream_input_diff_processes.py  demo_stream_input_diff_threaded.py  demo_stream_input_two_processes.py  demo_stream_input_two_threaded.py  demo_stream_moniter.py  demo_stream_moniter_recording.pkf  demo_stream_multithread.py  demo_stream_output.py  demo_stream_output_diff_processes.py  demo_stream_output_diff_threaded.py  demo_stream_output_thread_count_latency.py  demo_stream_output_two_processes.py  demo_stream_output_two_threaded.py  demo_stream_playback_thread_count_latency.py  demo_stream_playrecord.py  demo_stream_rec_long_forever.py  (+13 more)
audiodevice_py/examples/车载试音/: Don‘t stop me now（柔和度，解析力）.pkf  加州旅馆（临场氛围感、杂音）.pkf  张三的歌（明亮度）.pkf  船歌（低频量感）.pkf
scripts/: build_artifacts.ps1
(+20 files in other folders)
