[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiodevice"
# version is overwritten by build_wheel.py at build time (0.1.0.postYYYYMMDDHHMM)
version = "0.1.0.post202603111534"
description = "Windows-only audio engine SDK (Rust engine via TCP JSON), audiodevice-like API."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
# Optional wheel-bundled engine artifacts (if you include them when building a wheel):
# audiodevice/bin/audiodevice.exe
# audiodevice/bin/portaudio.dll
audiodevice = ["bin/*.exe", "bin/*.dll"]

[tool.setuptools.packages.find]
where = ["."]

