[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiodevice"
# version is overwritten by build_wheel.py at build time (0.1.0.postYYYYMMDDHHMM)
version = "0.1.0.post202603161750"
description = "Windows-only audio engine SDK (Rust engine via TCP JSON), audiodevice-like API."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
# Engine binaries bundled in the wheel; pip install deploys them to site-packages/audiodevice/bin/.
# Run build_wheel.py to prepare bin/ (copy from audio_engine/target/release or extract from engine.zip) before building.
audiodevice = ["bin/*.exe", "bin/*.dll"]

[tool.setuptools.packages.find]
where = ["."]

